--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/button2_144"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Set Rent reminder"
@@ -14,7 +14,7 @@
         tools:layout_editor_absoluteY="30dp" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textView2_144"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Home"
@@ -22,7 +22,7 @@
         tools:layout_editor_absoluteY="30dp" />
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/imageButton_144"
         android:layout_width="88dp"
         android:layout_height="91dp"
         tools:layout_editor_absoluteX="37dp"
@@ -30,7 +30,7 @@
         tools:srcCompat="@tools:sample/avatars" />
 
     <ImageButton
-        android:id="@+id/imageButton4"
+        android:id="@+id/imageButton4_144"
         android:layout_width="79dp"
         android:layout_height="77dp"
         tools:layout_editor_absoluteX="61dp"
@@ -38,7 +38,7 @@
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/textView3_144"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello Jasmine"
@@ -47,7 +47,7 @@
         tools:layout_editor_absoluteY="124dp" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/textView4_144"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Information"
@@ -55,7 +55,7 @@
         tools:layout_editor_absoluteY="220dp" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/textView5_144"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Nguyen Tuan TIn"
@@ -63,7 +63,7 @@
         tools:layout_editor_absoluteY="264dp" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/textView6_144"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="New York city"
@@ -71,7 +71,7 @@
         tools:layout_editor_absoluteY="314dp" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/button3_144"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Call"
@@ -79,7 +79,7 @@
         tools:layout_editor_absoluteY="368dp" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/button4_144"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Send sms"
@@ -87,7 +87,7 @@
         tools:layout_editor_absoluteY="368dp" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/textView7_144"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Payment"
@@ -95,7 +95,7 @@
         tools:layout_editor_absoluteY="483dp" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/button5_144"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Pay"
@@ -103,41 +103,41 @@
         tools:layout_editor_absoluteY="533dp" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline2"
+        android:id="@+id/guideline2_144"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_begin="210dp" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline3"
+        android:id="@+id/guideline3_144"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_begin="470dp" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline4"
+        android:id="@+id/guideline4_144"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_begin="631dp" />
 
     <androidx.cardview.widget.CardView
-        android:layout_width="121dp"
+        android:layout_width="121dp_144"
         android:layout_height="83dp"
         tools:layout_editor_absoluteX="37dp"
         tools:layout_editor_absoluteY="686dp">
 
         <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/textView8_144"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Add new" />
     </androidx.cardview.widget.CardView>
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textView_144"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Complain"
@@ -145,13 +145,13 @@
         tools:layout_editor_absoluteY="648dp" />
 
     <androidx.cardview.widget.CardView
-        android:layout_width="117dp"
+        android:layout_width="117dp_144"
         android:layout_height="89dp"
         tools:layout_editor_absoluteX="215dp"
         tools:layout_editor_absoluteY="686dp" >
 
         <TextView
-            android:id="@+id/textView9"
+            android:id="@+id/textView9_144"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="4 complaints" />
